--- a/dvc.yaml
+++ b/dvc.yaml
@@ -9,5 +9,5 @@ stages:
     - bottleneck_features_validation.npy
     - model.h5
     metrics:
-    - metrics.csv:
+    - metrics.json:
         cache: false
